# OpenMS

./: .gitignore  .gitmodules  APPLICATION.json  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  INSTALL.bat  README.md  application.json  storage.db  vcpkg.json
OpenMS/: CMakeLists.txt  IChannel.h  IChannelAddress.h  IChannelContext.h  IChannelEvent.h  IChannelHandler.h  IChannelPipeline.h  IChannelProtocol.h  IChannelReactor.h  IService.h  MS.h
OpenMS/Channel/: IChannel.h  IChannelContext.h  IChannelHandler.h
OpenMS/Channel/HTTP/: HTTPServerReactor.h
OpenMS/Channel/KCP/: KCPChannel.cpp  KCPServerReactor.h
OpenMS/Channel/Private/: Channel.cpp  Channel.h  ChannelAddress.cpp  ChannelContext.cpp  ChannelContext.h  ChannelPipeline.h  ChannelReactor.cpp  ChannelReactor.h
OpenMS/Channel/TCP/: TCPChannel.cpp  TCPClientReactor.cpp  TCPClientReactor.h  TCPServerReactor.h
OpenMS/Channel/UDP/: UDPClientReactor.cpp  UDPServerReactor.cpp
OpenMS/Channel/WS/: WSServerReactor.cpp  WSServerReactor.h
OpenMS/Coroutine/: ICoroutinePromise.h
OpenMS/Endpoint/: IEndpoint.h
OpenMS/Endpoint/HTTP/: HTTPClient.cpp  HTTPClient.h  HTTPProtocol.h  HTTPServer.cpp  HTTPServer.h
OpenMS/Endpoint/KCP/: KCPClient.cpp  KCPClient.h  KCPServer.cpp  KCPServer.h
OpenMS/Endpoint/MySQL/: MySQLClient.cpp  MySQLClient.h  MySQLPool.cpp  MySQLPool.h
OpenMS/Endpoint/Private/: Endpoint.cpp  Endpoint.h
OpenMS/Endpoint/RPC/: RPCClient.cpp  RPCClient.h  RPCProtocol.h  RPCServer.cpp  RPCServer.h
OpenMS/Endpoint/Redis/: RedisClient.cpp  RedisClient.h  RedisPool.cpp  RedisPool.h
OpenMS/Endpoint/SQLite/: SQLiteClient.cpp  SQLiteClient.h
OpenMS/Endpoint/TCP/: TCPClient.cpp  TCPClient.h  TCPServer.cpp  TCPServer.h
OpenMS/Endpoint/UDP/: UDPClient.cpp  UDPClient.h  UDPServer.cpp  UDPServer.h
OpenMS/Endpoint/WS/: WSClient.cpp  WSClient.h  WSServer.cpp  WSServer.h
OpenMS/Handler/AES/: AESHandler.cpp  AESHandler.h
OpenMS/KCP/: KCPChannel.cpp  KCPChannel.h  KCPClientReactor.cpp  KCPClientReactor.h  KCPServerReactor.cpp  KCPServerReactor.h
OpenMS/Mailbox/: IMail.h  IMailBox.h  IMailContext.h  IMailHub.h  IMailPromise.h
OpenMS/Mailbox/Private/: Mail.h  MailBox.cpp  MailBox.h  MailContext.cpp  MailContext.h  MailDeliver.cpp  MailDeliver.h  MailHub.cpp  MailHub.h  MailMan.cpp  MailMan.h
OpenMS/Message/: IMessage.h  IMessageBox.h  IMessageHub.h  IMessageSession.h
OpenMS/Private/: Channel.cpp  Channel.h  ChannelAddress.cpp  ChannelAddress.h  ChannelContext.cpp  ChannelContext.h  ChannelHandler.cpp  ChannelHandler.h  ChannelPipeline.cpp  ChannelPipeline.h  ChannelReactor.cpp  ChannelReactor.h  ChannelWorker.cpp  ChannelWorker.h  Service.cpp  Service.h
OpenMS/Reactor/: IChannel.h  IChannelAddress.h  IChannelBuffer.h  IChannelContext.h  IChannelEvent.h  IChannelHandler.h  IChannelPipeline.h  IChannelReactor.h  IChannelWorker.h
OpenMS/Reactor/KCP - 副本/: KCPChannel.h  (+1 more)
OpenMS/Remote/: RemoteClient.cpp  RemoteClient.h  RemoteServer.cpp  RemoteServer.h
OpenMS/Server/: IProperty.h  IServer.h  IStartup.h
OpenMS/Service/: Autowired.h  Bootstrap.h  IBootstrap.h  IEnvironment.h  IProperty.h  IPropertySource.h  IServer.h  IService.h  IStartup.h
OpenMS/TCP/: TCPChannel.h  TCPClientReactor.cpp  TCPClientReactor.h  TCPServerReactor.cpp  TCPServerReactor.h
OpenMS/Toolkit/: Timer.cpp  Timer.h
OpenMS/UDP/: UDPChannel.cpp  UDPChannel.h  UDPClientReactor.cpp  UDPClientReactor.h  UDPServerReactor.cpp  UDPServerReactor.h
OpenMS/Utility/: Async.cpp  Async.h  AsyncUtility.h  QuickQPS.h  Timer.cpp  Timer.h  TimerUtility.h  TraitsUtility.h
Sample/: CMakeLists.txt  ClusterDemo.cpp  ClusterDemo.h  ClusterDemo1.cpp  ClusterDemo1.h  ClusterDemo2.cpp  ClusterDemo2.h  DemoServer.cpp  DemoServer.h  DemoService.cpp  DemoService.h  MasterDemo.cpp  MasterDemo.h  TestHandler.h  main.cpp
Sample/Cluster/: CMakeLists.txt  ClusterDemo1.cpp  ClusterDemo1.h  ClusterDemo2.cpp  ClusterDemo2.h  MasterDemo.cpp  MasterDemo.h
Sample/FrameSync/: CMakeLists.txt  FrameClient.cpp  FrameConfig.h  FrameServer.cpp  Message.pb.cc  Message.pb.h  Message.proto  PROTOC.bat
Sample/Single/: CMakeLists.txt  KCPDemo.cpp  RPCDemo.cpp  TCPDemo.cpp  UDPDemo.cpp  WSDemo.cpp
Sample/StatusSync/: CMakeLists.txt  StatusClient.cpp  StatusClient.h  StatusServer.cpp  StatusServer.h
Service/Authority/: AuthorityConfig.h  AuthorityServer.cpp  AuthorityServer.h  AuthorityService.cpp  AuthorityService.h  CMakeLists.txt
Service/Backend/: BackendServer.cpp  BackendServer.h  CMakeLists.txt  MyBackend.cpp  PlayerService.cpp  PlayerService.h  SpaceService.cpp  SpaceService.h  StateBackend.cpp
Service/Business/: BusinessServer.cpp  BusinessServer.h  CMakeLists.txt  LogicService.cpp  LogicService.h  LoginService.cpp  LoginService.h  MatchService.cpp  MatchService.h  PlayerService.cpp  PlayerService.h  ServerService.cpp  ServerService.h  SpaceService.cpp  SpaceService.h
Service/Database/: CMakeLists.txt  MySQLConfig.h  MySQLServer.cpp  MySQLServer.h  MySQLService.cpp  MySQLService.h  RedisConfig.h  RedisServer.cpp  RedisServer.h  RedisService.cpp  RedisService.h  SQLiteServer.cpp  SQLiteServer.h
Service/FileServer/: CMakeLists.txt  FileServerConfig.h  FileServerService.cpp  FileServerService.h
Service/Frontend/: CMakeLists.txt  ClientService.cpp  ClientService.h  FrontendClient.cpp  FrontendClient.h  MyFrontend.cpp  PlayerService.cpp  PlayerService.h  StateFrontend.cpp
Service/Gateway/: CMakeLists.txt  ForwardService.cpp  ForwardService.h  GatewayHandler.cpp  GatewayHandler.h  GatewayServer.cpp  GatewayServer.h  GatewayService.cpp  GatewayService.h  GuestService.cpp  GuestService.h  ProxyService.cpp  ProxyService.h
Service/Registry/: CMakeLists.txt  RegistryConfig.h  RegistryHandler.cpp  RegistryHandler.h  RegistryServer.cpp  RegistryServer.h  RegistryService.cpp  RegistryService.h  main.cpp
Service/Storage/: CMakeLists.txt  StorageServer.cpp  StorageServer.h  UserService.cpp  UserService.h
Service/WebServer/: CMakeLists.txt  WebConfig.h  WebServer.cpp  WebServer.h  WebServerConfig.h  WebServerService.cpp  WebServerService.h
(+179 files in other folders)
