cmake_minimum_required(VERSION 3.10...4.0)
project(OpenMS)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY  ${CMAKE_BINARY_DIR})
set(OPENMS_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR})

include_directories(${OPENMS_SOURCE_DIR})
add_subdirectory(${OPENMS_SOURCE_DIR}/OpenMS)
add_subdirectory(${OPENMS_SOURCE_DIR}/External/iocpp)

if(OPENMS_ENABLE_SAMPLE)
add_subdirectory(${OPENMS_SOURCE_DIR}/Sample)
endif()

if(OPENMS_ENABLE_DISCOVERY)
add_subdirectory(${OPENMS_SOURCE_DIR}/Service/Discovery)
endif()

if(OPENMS_ENABLE_GATEWAY)
    add_subdirectory(${OPENMS_SOURCE_DIR}/Service/Gateway)
endif()

if(OPENMS_ENABLE_MYSQL OR OPENMS_ENABLE_REDIS)
add_subdirectory(${OPENMS_SOURCE_DIR}/Service/Database)
endif()

if(OPENMS_ENABLE_WEBSERVER)
add_subdirectory(${OPENMS_SOURCE_DIR}/Service/WebServer)
endif()

if(OPENMS_ENABLE_CONFIG)
file(CREATE_LINK "${OPENMS_SOURCE_DIR}/APPLICATION.json" "${CMAKE_BINARY_DIR}/APPLICATION.json")
endif()